--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,19 @@ asgiref==3.5.2
 astroid==2.12.10
 certifi==2022.9.14
 charset-normalizer==2.1.1
+click==8.1.3
 coverage==6.4.4
 dill==0.3.5.1
 distlib==0.3.6
 filelock==3.8.0
+Flask==2.2.2
+gunicorn==20.1.0
+importlib-metadata==5.0.0
 isort==5.10.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
 lazy-object-proxy==1.7.1
+MarkupSafe==2.1.1
 mccabe==0.7.0
 platformdirs==2.5.2
 pylint==2.15.3
@@ -15,7 +22,9 @@ requests==2.28.1
 sqlparse==0.4.2
 tomli==2.0.1
 tomlkit==0.11.4
-typing_extensions==4.3.0
+typing-extensions==4.3.0
 urllib3==1.26.12
 virtualenv==20.16.5
+Werkzeug==2.2.2
 wrapt==1.14.1
+zipp==3.8.1
