--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,44 @@
+asgiref==3.5.2
+astroid==2.12.13
+backports.zoneinfo==0.2.1
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
 coverage==6.4.4
+cryptography==38.0.3
+defusedxml==0.7.1
+dill==0.3.6
 Django==4.1.2
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
 Flask==2.2.2
 gunicorn==20.1.0
+idna==3.4
+importlib-metadata==5.0.0
+isort==5.10.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lazy-object-proxy==1.8.0
+MarkupSafe==2.1.1
+mccabe==0.7.0
+oauthlib==3.2.2
+platformdirs==2.5.4
+psycopg2-binary==2.9.5
+pycparser==2.21
+PyJWT==2.6.0
 pylint==2.15.3
+python3-openid==3.2.0
+pytz==2022.6
+requests==2.28.1
+requests-oauthlib==1.3.1
+social-auth-app-django==5.0.0
+social-auth-core==4.3.0
+sqlparse==0.4.3
+tomli==2.0.1
+tomlkit==0.11.6
+typing_extensions==4.4.0
+urllib3==1.26.12
+Werkzeug==2.2.2
+wrapt==1.14.1
+zipp==3.10.0
