Добавил centrifugo в качетсве канала для общения клиента и сервера

--- a/.gitignore
+++ b/.gitignore
@@ -133,4 +133,4 @@ dmypy.json
 
 /chat_project/chat_auth/google_auth/*
 /chat_project/messenger/credentials/*
-/chat_project/config.json
+/config.json
